--- a/style.css
+++ b/style.css
@@ -39,3 +39,26 @@ body {
     top: calc(45% + 3em); /* Adjust this value to match the main text position */
     transform: translateY(-50%);
 }
+
+.menu-button {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.menu-button span {
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: rgba(13, 3, 3, 0.704);
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.menu-button:hover span {
+    background-color: #010000;
+}
