--- a/style.css
+++ b/style.css
@@ -62,3 +62,21 @@ body {
 .menu-button:hover span {
     background-color: #010000;
 }
+
+#fade-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    z-index: 1000;
+}
+
+#fade-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
